Closed Bug 1950501 Opened 8 months ago Closed 8 months ago

Content analysis agent timeout/deny-url/etc should always show response

Categories

(Firefox :: Data Loss Prevention, defect)

defect

Tracking

()

RESOLVED FIXED
137 Branch
Tracking Status
firefox137 --- fixed

People

(Reporter: handyman, Assigned: handyman)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When timing out, we issue the default response, which may be to block. The response for items on the deny-url list is always to block. If browser.contentanalysis.show_blocked_result is false then these things will not show a blocked dialog, which means there is no indication of the response, which is wrong. We should always show a dialog in these cases, regardless of the pref value. We can add a boolean to indicate isAgentResponse to the response class, set it for agent responses here, relay that value to _showCAResult here, and add it to the conditional here.

Blocks: 1882607

Messages not from an agent can't have been shown by an agent, so ignore the pref for them.

Assignee: nobody → davidp99
Status: NEW → ASSIGNED
Pushed by daparks@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d16cff0d256f Ignore browser.contentanalysis.show_blocked_dialog for non-agent messages r=dlp-reviewers,gstoll
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: