Bug 1950501: Ignore browser.contentanalysis.show_blocked_dialog for non-agent messages r=dlp-reviewers,gstoll

Messages not from an agent can't have been shown by an agent, so ignore the pref for them.

Differential Revision: https://phabricator.services.mozilla.com/D239825